name:                random-vim-tips
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/natearn/random-vim-tips#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan Arnold
maintainer:          natearn@natearn.info
copyright:           2017 Nathan Arnold
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
  default-language:    Haskell2010

executable random-vim-tips-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , random-vim-tips
                     , warp
  default-language:    Haskell2010

test-suite random-vim-tips-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , random-vim-tips
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/natearn/random-vim-tips
